kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lh-whatsapp-app
  labels:
    app: lh-whatsapp

spec:
  selector:
    matchLabels:
      app: lh-whatsapp

  replicas: 1

  template:
    metadata:
      labels:
        app: lh-whatsapp

    spec:
      restartPolicy: Always

      containers:
        - name: lh-whatsapp
          image: 536697232357.dkr.ecr.eu-west-3.amazonaws.com/orion:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: lh-whatsapp-service
spec:
  selector:
    app: lh-whatsapp
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
