kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orion-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx

  defaultBackend:
    service:
      name: lh-whatsapp
      port:
        number: 80

  rules:
  - host: www.ediscovery.cz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lh-whatsapp
            port:
              number: 80
